; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_gem_fence_reg.c_detect_bit_6_swizzle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_gem_fence_reg.c_detect_bit_6_swizzle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { %struct.TYPE_2__, i32, i64, %struct.intel_uncore }
%struct.TYPE_2__ = type { i32, i32 }
%struct.intel_uncore = type { i32 }

@I915_BIT_6_SWIZZLE_UNKNOWN = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_NONE = common dso_local global i32 0, align 4
@DISP_ARB_CTL = common dso_local global i32 0, align 4
@DISP_TILE_SURFACE_SWIZZLING = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9_10 = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9 = common dso_local global i32 0, align 4
@MAD_DIMM_C0 = common dso_local global i32 0, align 4
@MAD_DIMM_C1 = common dso_local global i32 0, align 4
@MAD_DIMM_A_SIZE_MASK = common dso_local global i32 0, align 4
@MAD_DIMM_B_SIZE_MASK = common dso_local global i32 0, align 4
@C0DRB3 = common dso_local global i32 0, align 4
@C1DRB3 = common dso_local global i32 0, align 4
@DCC = common dso_local global i32 0, align 4
@DCC_ADDRESSING_MODE_MASK = common dso_local global i32 0, align 4
@DCC_CHANNEL_XOR_DISABLE = common dso_local global i32 0, align 4
@DCC_CHANNEL_XOR_BIT_17 = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9_10_11 = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9_11 = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9_10_17 = common dso_local global i32 0, align 4
@I915_BIT_6_SWIZZLE_9_17 = common dso_local global i32 0, align 4
@DCC2 = common dso_local global i32 0, align 4
@DCC2_MODIFIED_ENHANCED_DISABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"Couldn't read from MCHBAR.  Disabling tiling.\0A\00", align 1
@QUIRK_PIN_SWIZZLED_PAGES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_i915_private*)* @detect_bit_6_swizzle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detect_bit_6_swizzle(%struct.drm_i915_private* %0) #0 {
  %2 = alloca %struct.drm_i915_private*, align 8
  %3 = alloca %struct.intel_uncore*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %2, align 8
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %10 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %9, i32 0, i32 3
  store %struct.intel_uncore* %10, %struct.intel_uncore** %3, align 8
  %11 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %12, i32* %5, align 4
  %13 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %14 = call i32 @INTEL_GEN(%struct.drm_i915_private* %13)
  %15 = icmp sge i32 %14, 8
  br i1 %15, label %20, label %16

16:                                               ; preds = %1
  %17 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %18 = call i64 @IS_VALLEYVIEW(%struct.drm_i915_private* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %16, %1
  %21 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %22, i32* %5, align 4
  br label %169

23:                                               ; preds = %16
  %24 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %25 = call i32 @INTEL_GEN(%struct.drm_i915_private* %24)
  %26 = icmp sge i32 %25, 6
  br i1 %26, label %27, label %74

27:                                               ; preds = %23
  %28 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %29 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %46

32:                                               ; preds = %27
  %33 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %34 = load i32, i32* @DISP_ARB_CTL, align 4
  %35 = call i32 @intel_uncore_read(%struct.intel_uncore* %33, i32 %34)
  %36 = load i32, i32* @DISP_TILE_SURFACE_SWIZZLING, align 4
  %37 = and i32 %35, %36
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %32
  %40 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10, align 4
  store i32 %40, i32* %4, align 4
  %41 = load i32, i32* @I915_BIT_6_SWIZZLE_9, align 4
  store i32 %41, i32* %5, align 4
  br label %45

42:                                               ; preds = %32
  %43 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %43, i32* %4, align 4
  %44 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %42, %39
  br label %73

46:                                               ; preds = %27
  %47 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %48 = load i32, i32* @MAD_DIMM_C0, align 4
  %49 = call i32 @intel_uncore_read(%struct.intel_uncore* %47, i32 %48)
  store i32 %49, i32* %6, align 4
  %50 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %51 = load i32, i32* @MAD_DIMM_C1, align 4
  %52 = call i32 @intel_uncore_read(%struct.intel_uncore* %50, i32 %51)
  store i32 %52, i32* %7, align 4
  %53 = load i32, i32* @MAD_DIMM_A_SIZE_MASK, align 4
  %54 = load i32, i32* @MAD_DIMM_B_SIZE_MASK, align 4
  %55 = or i32 %53, %54
  %56 = load i32, i32* %6, align 4
  %57 = and i32 %56, %55
  store i32 %57, i32* %6, align 4
  %58 = load i32, i32* @MAD_DIMM_A_SIZE_MASK, align 4
  %59 = load i32, i32* @MAD_DIMM_B_SIZE_MASK, align 4
  %60 = or i32 %58, %59
  %61 = load i32, i32* %7, align 4
  %62 = and i32 %61, %60
  store i32 %62, i32* %7, align 4
  %63 = load i32, i32* %6, align 4
  %64 = load i32, i32* %7, align 4
  %65 = icmp eq i32 %63, %64
  br i1 %65, label %66, label %69

66:                                               ; preds = %46
  %67 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10, align 4
  store i32 %67, i32* %4, align 4
  %68 = load i32, i32* @I915_BIT_6_SWIZZLE_9, align 4
  store i32 %68, i32* %5, align 4
  br label %72

69:                                               ; preds = %46
  %70 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %70, i32* %4, align 4
  %71 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %71, i32* %5, align 4
  br label %72

72:                                               ; preds = %69, %66
  br label %73

73:                                               ; preds = %72, %45
  br label %168

74:                                               ; preds = %23
  %75 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %76 = call i64 @IS_GEN(%struct.drm_i915_private* %75, i32 5)
  %77 = icmp ne i64 %76, 0
  br i1 %77, label %78, label %81

78:                                               ; preds = %74
  %79 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10, align 4
  store i32 %79, i32* %4, align 4
  %80 = load i32, i32* @I915_BIT_6_SWIZZLE_9, align 4
  store i32 %80, i32* %5, align 4
  br label %167

81:                                               ; preds = %74
  %82 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %83 = call i64 @IS_GEN(%struct.drm_i915_private* %82, i32 2)
  %84 = icmp ne i64 %83, 0
  br i1 %84, label %85, label %88

85:                                               ; preds = %81
  %86 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %86, i32* %4, align 4
  %87 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %87, i32* %5, align 4
  br label %166

88:                                               ; preds = %81
  %89 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %90 = call i64 @IS_G45(%struct.drm_i915_private* %89)
  %91 = icmp ne i64 %90, 0
  br i1 %91, label %100, label %92

92:                                               ; preds = %88
  %93 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %94 = call i64 @IS_I965G(%struct.drm_i915_private* %93)
  %95 = icmp ne i64 %94, 0
  br i1 %95, label %100, label %96

96:                                               ; preds = %92
  %97 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %98 = call i64 @IS_G33(%struct.drm_i915_private* %97)
  %99 = icmp ne i64 %98, 0
  br i1 %99, label %100, label %112

100:                                              ; preds = %96, %92, %88
  %101 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %102 = load i32, i32* @C0DRB3, align 4
  %103 = call i32 @intel_uncore_read(%struct.intel_uncore* %101, i32 %102)
  %104 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %105 = load i32, i32* @C1DRB3, align 4
  %106 = call i32 @intel_uncore_read(%struct.intel_uncore* %104, i32 %105)
  %107 = icmp eq i32 %103, %106
  br i1 %107, label %108, label %111

108:                                              ; preds = %100
  %109 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10, align 4
  store i32 %109, i32* %4, align 4
  %110 = load i32, i32* @I915_BIT_6_SWIZZLE_9, align 4
  store i32 %110, i32* %5, align 4
  br label %111

111:                                              ; preds = %108, %100
  br label %165

112:                                              ; preds = %96
  %113 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %114 = load i32, i32* @DCC, align 4
  %115 = call i32 @intel_uncore_read(%struct.intel_uncore* %113, i32 %114)
  store i32 %115, i32* %8, align 4
  %116 = load i32, i32* %8, align 4
  %117 = load i32, i32* @DCC_ADDRESSING_MODE_MASK, align 4
  %118 = and i32 %116, %117
  switch i32 %118, label %143 [
    i32 128, label %119
    i32 130, label %119
    i32 129, label %122
  ]

119:                                              ; preds = %112, %112
  %120 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %120, i32* %4, align 4
  %121 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %121, i32* %5, align 4
  br label %143

122:                                              ; preds = %112
  %123 = load i32, i32* %8, align 4
  %124 = load i32, i32* @DCC_CHANNEL_XOR_DISABLE, align 4
  %125 = and i32 %123, %124
  %126 = icmp ne i32 %125, 0
  br i1 %126, label %127, label %130

127:                                              ; preds = %122
  %128 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10, align 4
  store i32 %128, i32* %4, align 4
  %129 = load i32, i32* @I915_BIT_6_SWIZZLE_9, align 4
  store i32 %129, i32* %5, align 4
  br label %142

130:                                              ; preds = %122
  %131 = load i32, i32* %8, align 4
  %132 = load i32, i32* @DCC_CHANNEL_XOR_BIT_17, align 4
  %133 = and i32 %131, %132
  %134 = icmp eq i32 %133, 0
  br i1 %134, label %135, label %138

135:                                              ; preds = %130
  %136 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10_11, align 4
  store i32 %136, i32* %4, align 4
  %137 = load i32, i32* @I915_BIT_6_SWIZZLE_9_11, align 4
  store i32 %137, i32* %5, align 4
  br label %141

138:                                              ; preds = %130
  %139 = load i32, i32* @I915_BIT_6_SWIZZLE_9_10_17, align 4
  store i32 %139, i32* %4, align 4
  %140 = load i32, i32* @I915_BIT_6_SWIZZLE_9_17, align 4
  store i32 %140, i32* %5, align 4
  br label %141

141:                                              ; preds = %138, %135
  br label %142

142:                                              ; preds = %141, %127
  br label %143

143:                                              ; preds = %112, %142, %119
  %144 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %145 = call i64 @IS_GEN(%struct.drm_i915_private* %144, i32 4)
  %146 = icmp ne i64 %145, 0
  br i1 %146, label %147, label %157

147:                                              ; preds = %143
  %148 = load %struct.intel_uncore*, %struct.intel_uncore** %3, align 8
  %149 = load i32, i32* @DCC2, align 4
  %150 = call i32 @intel_uncore_read(%struct.intel_uncore* %148, i32 %149)
  %151 = load i32, i32* @DCC2_MODIFIED_ENHANCED_DISABLE, align 4
  %152 = and i32 %150, %151
  %153 = icmp ne i32 %152, 0
  br i1 %153, label %157, label %154

154:                                              ; preds = %147
  %155 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %155, i32* %4, align 4
  %156 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %156, i32* %5, align 4
  br label %157

157:                                              ; preds = %154, %147, %143
  %158 = load i32, i32* %8, align 4
  %159 = icmp eq i32 %158, -1
  br i1 %159, label %160, label %164

160:                                              ; preds = %157
  %161 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %162 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %162, i32* %4, align 4
  %163 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  store i32 %163, i32* %5, align 4
  br label %164

164:                                              ; preds = %160, %157
  br label %165

165:                                              ; preds = %164, %111
  br label %166

166:                                              ; preds = %165, %85
  br label %167

167:                                              ; preds = %166, %78
  br label %168

168:                                              ; preds = %167, %73
  br label %169

169:                                              ; preds = %168, %20
  %170 = load i32, i32* %4, align 4
  %171 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  %172 = icmp eq i32 %170, %171
  br i1 %172, label %177, label %173

173:                                              ; preds = %169
  %174 = load i32, i32* %5, align 4
  %175 = load i32, i32* @I915_BIT_6_SWIZZLE_UNKNOWN, align 4
  %176 = icmp eq i32 %174, %175
  br i1 %176, label %177, label %185

177:                                              ; preds = %173, %169
  %178 = load i32, i32* @QUIRK_PIN_SWIZZLED_PAGES, align 4
  %179 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %180 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %179, i32 0, i32 1
  %181 = load i32, i32* %180, align 8
  %182 = or i32 %181, %178
  store i32 %182, i32* %180, align 8
  %183 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %183, i32* %4, align 4
  %184 = load i32, i32* @I915_BIT_6_SWIZZLE_NONE, align 4
  store i32 %184, i32* %5, align 4
  br label %185

185:                                              ; preds = %177, %173
  %186 = load i32, i32* %4, align 4
  %187 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %188 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %187, i32 0, i32 0
  %189 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %188, i32 0, i32 0
  store i32 %186, i32* %189, align 8
  %190 = load i32, i32* %5, align 4
  %191 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %192 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %191, i32 0, i32 0
  %193 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %192, i32 0, i32 1
  store i32 %190, i32* %193, align 4
  ret void
}

declare dso_local i32 @INTEL_GEN(%struct.drm_i915_private*) #1

declare dso_local i64 @IS_VALLEYVIEW(%struct.drm_i915_private*) #1

declare dso_local i32 @intel_uncore_read(%struct.intel_uncore*, i32) #1

declare dso_local i64 @IS_GEN(%struct.drm_i915_private*, i32) #1

declare dso_local i64 @IS_G45(%struct.drm_i915_private*) #1

declare dso_local i64 @IS_I965G(%struct.drm_i915_private*) #1

declare dso_local i64 @IS_G33(%struct.drm_i915_private*) #1

declare dso_local i32 @DRM_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
